# cmcs-eregulations

./: .editorconfig  .eslintrc.json  .flake8  .gitignore  .gitleaks.toml  .gitmodules  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE.md  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  SECRETSCANNING.md  SECURITY.md  SNYK.md  SnykReadMe.md  code.json  cypress.Dockerfile  docker-compose.e2e.yml  docker-compose.parser.yml  docker-compose.test.yml  docker-compose.yml  eslint-global-rules.mjs  eslint.config.mjs  load_data.sh  package-lock.json  package.json  requirements.txt  ruff.toml  run.sh  serverless.yml  temp-test-file
solution/backend/: .coverage  LambdaPolicy.json  StorageBucketPolicy.json  authorizer.Dockerfile  authorizer.py  create_db.yml  createdb.Dockerfile  createdb.py  createsu.Dockerfile  createsu.py  debug_handler.py  dropdb.Dockerfile  dropdb.py  empty_bucket.Dockerfile  empty_bucket.py  eregs_exp.yml  handler.py  index_resources.py  maintenance_lambda.py  manage.py  migrate.Dockerfile  migrate.py  output.txt  package-lock.json  package.json  policy-document.json  populate_content.py  pyproject.toml  pytest.ini  redirect_lambda.py  regsite.Dockerfile  requirements.txt  ruff.toml  secret_manager.py  serverless-experimental.yml  serverless-maintenance.yml  serverless-redirect.yml  serverless.yml  test-local.sh  testfunc.py
solution/backend/aws_resources/: waf.yml
solution/backend/cmcs_regulations/: asgi.py  context_processors.py  settings.py  test_settings.py  urls.py  wsgi.py
solution/backend/cmcs_regulations/fixtures/: auth.group.json  auth.permission.json  contenttypes.contenttype.json
solution/backend/cmcs_regulations/settings/: base.py  deploy.py  eua_settings.py  euasettings.py  local.py  test_settings.py
solution/backend/cmcs_regulations/templates/: login.html
solution/backend/cmcs_regulations/utils/: __init__.py  api_exceptions.py  pagination.py
solution/backend/common/: admin.py  api.py  auth.py  aws.py  aws_utils.py  constants.py  exceptions.py  external_lambda.py  fields.py  filters.py  functions.py  mixins.py  patterns.py  populate_seed.py  serializers.py  utils.py
solution/backend/common/serializers/: mix.py
solution/backend/common/test_functions/: common_functions.py
solution/backend/common/tests/: test_fields.py  test_filters.py
solution/backend/content_search/: admin.py  apps.py  functions.py  models.py  serializers.py  signals.py  text_extraction.py  urls.py  utils.py  views.py
solution/backend/content_search/fixtures/: content_search.contentindex.json
solution/backend/content_search/migrations/: 0001_initial.py  0001_to_0012_squashed.py  0002_add_vector.py  0002_alter_contentindex_options.py  0002_remove_contentindex_file.py  0003_auto_20231004_1438.py  0003_contentindex_uid.py  0003_copy_regtext_indices.py  0003_index_existing_items.py  0003_populate_index.py  0003_rename_parent_indexedregulationtext_part_and_more.py  0004_auto_20231004_1458.py  0004_auto_20231129_1427.py  0004_contentindex_content_type.py  0004_copy_synonyms.py  0004_remove_vector.py  0005_auto_20231005_1305.py  0005_contentindex_date.py  0005_populate_rank_fields.py  0006_add_vector_column.py  0006_contentindex_upload_category.py  0006_populate_date_field.py  0007_auto_20231006_1348.py  0007_contentindex_division.py  0007_contentindex_ignore_robots_txt.py  0007_enable_pgvector.py  0008_contentindex_embedding.py  0008_contentindex_extract_url.py  0008_contentindex_ignore_robots_txt.py  0008_rename_subject_contentindex_subjects.py  0009_alter_contentindex_reg_text_and_more.py  0009_contentindex_extract_url.py  0009_contentindex_resource_type.py  0009_enable_chunking.py  0009_indexedregulationtext_subpart_id_and_more.py  0009_remove_contentindex_embedding_textembedding.py  0010_alter_contentindex_url.py  0010_alter_textembedding_unique_together_and_more.py  0010_contentsearchconfiguration.py  0010_enable_chunking.py  (+17 more)
solution/backend/content_search/templates/: pgvector_search.html
solution/backend/content_search/tests/: disabled_test_post.py  test_edit_content_view.py  test_functions.py  (+5 more)
solution/backend/file_manager/: admin.py  apps.py  forms.py  functions.py  models.py  serializers.py  storage_backends.py  urls.py  views.py
solution/backend/regcore/: admin.py  apps.py  context_processors.py  documents.py  models.py  part_serializers.py  serializers.py  urls.py  v3views.py  views.py
solution/backend/regulations/: admin.py  context_processors.py  converters.py  feeds.py  logout.py  middleware.py  models.py  rss_feed.py  rss_feeds.py  sitemap.py  urls.py
solution/backend/resources/: 0030_migrate_resource_app.py  admin.py  apps.py  filters.py  mixins.py  models.py  new_models.py  old_admin.py  serializers.py  urls.py  utils.py  v3serializers.py  v3urls.py  v3views.py  views.py  wagtail_hooks.py
solution/backend/scripts/: backup_db.sh  delete_cloudformation_stack  invalidate-cloudfront.sh  restore_db.sh
solution/backend/serverless_functions/: deploy_functions.yml  dev_functions.yml  experimental_functions.yml  local_functions.yml  prod_functions.yml  readme.md  val_functions.yml
solution/backend/supplemental_content/: admin.py  models.py  serializers.py  urls.py  utils.py  v3serializers.py  v3urls.py  v3views.py  views.py
solution/backend/user/: admin.py  apps.py  models.py  signals.py
solution/text-extractor/: Dockerfile  Dockerfile.local  Dockerfile.template  README.md  backends.py  packages.txt  pptx_expected.txt  pyproject.toml  requirements.txt  serverless.yml  test_text_extractor.py  test_utils.py  text_extractor.py  utils.py
solution/text-extractor/backends/: __init__.py  backend.py  exceptions.py  s3.py  web.py
solution/text-extractor/extractors/: __init__.py  binary.py  email.py  excel.py  exceptions.py  extractor.py  image.py  markup.py  office.py  old_excel.py  outlook.py  pdf.py  powerpoint.py  rtf.py  text.py  textract.py  word.py  zip.py
(+2566 files in other folders)
