[project]
name = "eregulations-backend"
version = "3.0.0"
description = "Django site, backend, and API for eRegs"
readme = "../../README.md"
requires-python = "==3.12.12"
dependencies = [
    "boto3>=1.42.8",
    "defusedxml>=0.7.1",
    "django==5.2.9",
    "django-cors-headers>=4.9.0",
    "django-csp>=4.0",
    "django-debug-toolbar>=6.1.0",
    "django-jsonform>=2.23.2",
    "django-model-utils>=5.0.0",
    "django-solo>=2.4.0",
    "django-storages>=1.14.6",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "httpx>=0.28.1",
    "mozilla-django-oidc>=4.0.1",
    "natsort>=8.4.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "werkzeug>=3.1.4",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "cmcs_regulations.settings.test_settings"

[tool.coverage.run]
omit = [
    "*/migrations/*",
    "*/tests/*"
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
]
line-length = 130
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F", "G", "I", "S", "W", "ASYNC",
          "E111", "E112", "E113", "E114", "E115", "E116", "E117", "E201", "E202", "E203", "E211", "E222", "E222", "E223",
          "E224", "E225", "E226", "E227", "E228", "E231", "E241", "E242", "E251", "E252", "E261", "E262", "E265", "E266",
          "E271", "E272", "E273", "E274", "E275",
        ]
ignore = ['S101']

# Allow autofix for all enabled rules (when `--fix`) is provided.
[lint]
fixable = ["E", "F", "I", "W",
           "E201", "E202", "E203", "E211", "E231",
          ]
unfixable = []


# Same as Black.
line-length = 130

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.12.
target-version = "py312"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "ruff>=0.14.10",
]
