[project]
name = "text-extractor"
version = "1.0.0"
description = "Lambda function to extract text and generate embeddings from a variety of file types"
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "beautifulsoup4==4.13.5",
    "boto3==1.42.26",
    "docx2txt==0.9",
    "extract-msg==0.55.0",
    "magika==0.6.3",
    "moto==5.1.19",
    "openpyxl==3.1.5",
    "pillow==12.1.0",
    "pytest==9.0.2",
    "python-pptx==1.0.2",
    "requests==2.32.5",
    "ruff==0.14.10",
    "striprtf==0.0.29",
    "xlrd==2.0.2",
]

[tool.ruff]
# Same as Black.
line-length = 130

[lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F", "G", "I", "S", "W", "ASYNC",
          "E111", "E112", "E113", "E114", "E115", "E116", "E117", "E201", "E202", "E203", "E211", "E222", "E222", "E223",
          "E224", "E225", "E226", "E227", "E228", "E231", "E241", "E242", "E251", "E252", "E261", "E262", "E265", "E266",
          "E271", "E272", "E273", "E274", "E275",
        ]
ignore = ['S101']

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["E", "F", "I", "W",
           "E201", "E202", "E203", "E211", "E231",
          ]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
    "__init__.py",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.12.
target-version = "py312"
